--- a/src/components/ui/burger-constructor/burger-constructor.module.css
+++ b/src/components/ui/burger-constructor/burger-constructor.module.css
@@ -9,9 +9,10 @@
 .elements {
   min-height: 100px;
 
-  overflow-y: scroll;
+  overflow-y: auto;
   list-style-type: none;
   margin: 0;
+  padding: 0;
 }
 
 .total {
