--- a/src/components/ui/ingredient-details/ingredient-details.module.css
+++ b/src/components/ui/ingredient-details/ingredient-details.module.css
@@ -1,10 +1,10 @@
 .content {
-  margin: 0 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   width: 520px;
+  margin: 0px auto;
 }
 
 .nutritional_values {
