--- a/src/components/ui/ingredient-details/ingredient-details.module.css
+++ b/src/components/ui/ingredient-details/ingredient-details.module.css
@@ -22,3 +22,13 @@
   flex-direction: column;
   align-items: center;
 }
+
+.title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1;
+  text-align: center;
+  margin-top: 120px;
+  margin-bottom: 0;
+  font-family: 'Jet Brains Mono';
+}
